--- a/Makefile.common
+++ b/Makefile.common
@@ -4,7 +4,7 @@ all:
 .PHONY: clean
 clean:
 	@rm -rf .bin
-	@rm -f *.ufsl *.fsl *.fas *.x86f *.sparcf *.fasl 
+	@rm -f *.ufsl *.fsl *.fas *.x86f *.sparcf *.fasl  *.pfsl *.dfsl
 	@rm -f *.fasla8 *.fasla16 *.faslm8 *.faslm16 *.faslmt
 	@rm -f *~ *.bak *.orig *.err \#*\# .#*
 	@rm -f *.so *.a
