r9450: 22 May 2004 Kevin Rosenberg         * Version 2.10.21 released         * sql/sequences.lisp: Move generic sequence functions here from db-sqlite,         db-odbc, and db-aodbc.

--- a/db-odbc/Makefile
+++ b/db-odbc/Makefile
@@ -5,7 +5,7 @@
 #  Programer:    Kevin M. Rosenberg
 #  Date Started: Mar 2002
 #
-#  CVS Id:   $Id: Makefile 8153 2003-11-11 15:28:36Z kevin $
+#  CVS Id:   $Id$
 #
 # This file, part of CLSQL, is Copyright (c) 2002 by Kevin M. Rosenberg
 #
