--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,7 @@ pkg-pg-socket	:= cl-sql-postgresql-socket
 pkg-aodbc	:= cl-sql-aodbc
 pkg-odbc	:= cl-sql-odbc
 pkg-sqlite	:= cl-sql-sqlite
+pkg-oracle	:= cl-sql-oracle
 pkg-tests	:= cl-sql-tests
 all-pkgs	:= $(pkg) $(pkg-uffi) $(pkg-mysql) $(pkg-pg) $(pkg-pg-socket) $(pkg-aodbc) $(pkg-odbc) $(pkg-sqlite) $(pkg-tests)
 
@@ -27,6 +28,7 @@ srcs-pg-socket	:= $(wildcard db-postgresql-socket/*.lisp)
 srcs-aodbc	:= $(wildcard db-aodbc/*.lisp)
 srcs-odbc	:= $(wildcard db-odbc/*.lisp)
 srcs-sqlite	:= $(wildcard db-sqlite/*.lisp)
+srcs-oracle	:= $(wildcard db-oracle/*.lisp)
 srcs-tests	:= $(wildcard tests/*.lisp)
 
 clc-base	:= usr/share/common-lisp
@@ -54,6 +56,8 @@ clc-odbc	:= $(clc-source)/clsql-odbc
 lispdir-odbc	:= $(clc-odbc)/db-odbc
 clc-sqlite	:= $(clc-source)/clsql-sqlite
 lispdir-sqlite	:= $(clc-sqlite)/db-sqlite
+clc-oracle	:= $(clc-source)/clsql-oracle
+lispdir-oracle	:= $(clc-sqlite)/db-oracle
 clc-tests	:= $(clc-source)/clsql-tests
 lispdir-tests	:= $(clc-tests)/tests
 
@@ -108,6 +112,7 @@ install: build
 	dh_installdirs -p $(pkg-aodbc) $(lispdir-aodbc)
 	dh_installdirs -p $(pkg-odbc) $(lispdir-odbc)
 	dh_installdirs -p $(pkg-sqlite) $(lispdir-sqlite)
+	dh_installdirs -p $(pkg-oracle) $(lispdir-oracle)
 	dh_installdirs -p $(pkg-tests) $(lispdir-tests)
 
 	# Main package
@@ -133,6 +138,8 @@ install: build
 	dh_install -p $(pkg-odbc) clsql-odbc.asd $(clc-odbc)
 	dh_install -p $(pkg-sqlite) $(srcs-sqlite) $(lispdir-sqlite)
 	dh_install -p $(pkg-sqlite) clsql-sqlite.asd $(clc-sqlite)
+	dh_install -p $(pkg-oracle) $(srcs-oracle) $(lispdir-oracle)
+	dh_install -p $(pkg-oracle) clsql-oracle.asd $(clc-oracle)
 
 	dh_install -p $(pkg-tests) $(srcs-tests) $(lispdir-tests)
 	dh_install -p $(pkg-tests) clsql-tests.asd $(clc-tests)
@@ -146,6 +153,7 @@ install: build
 	dh_link -p $(pkg-aodbc) $(clc-aodbc)/clsql-aodbc.asd $(clc-systems)/clsql-aodbc.asd
 	dh_link -p $(pkg-odbc) $(clc-odbc)/clsql-odbc.asd $(clc-systems)/clsql-odbc.asd
 	dh_link -p $(pkg-sqlite) $(clc-sqlite)/clsql-sqlite.asd $(clc-systems)/clsql-sqlite.asd
+	dh_link -p $(pkg-oracle) $(clc-oracle)/clsql-oracle.asd $(clc-systems)/clsql-oracle.asd
 	dh_link -p $(pkg-tests) $(clc-tests)/clsql-tests.asd $(clc-systems)/clsql-tests.asd
 
 	# Documentation
