r9485: 26 May 2004 Kevin Rosenberg <kevin@rosenberg.net>         * sql/oodml.lisp: Commit universal-time typo patch from Edi Weitz         * test/test-init.lisp: Add universal-time slot to person.         * test/test-fddl.lisp: Add tests of universal-time slot         * test/test-ooddl.lisp: Test universal-time slot in an object         * TODO: Remove need for universal-time test         * debian/rules, debian/control: Add cl-sql-oracle binary package

--- a/debian/control
+++ b/debian/control
@@ -86,8 +86,7 @@ Depends: cl-sql (>= ${Source-Version}), cl-sql-uffi (>= ${Source-Version})
 Provides: cl-sql-backend
 Description: CLSQL database backend, Oracle
  This package enables you to use the CLSQL data access package
- with Oracle databases.  This package requires the Oracle Instant
- Client libraries to operate.
+ with Oracle databases.
  CLSQL is a Common Lisp interface to SQL databases.
 
 Package: cl-sql-tests
