--- a/db-mysql/Makefile.msvc
+++ b/db-mysql/Makefile.msvc
@@ -2,14 +2,14 @@
 ###########################################################################
 # FILE IDENTIFICATION
 # 
-#  Name:         Makefile.msvc
-#  Purpose:      Makefile for the CLSQL UFFI helper package (MSVC)
-#  Programer:    Kevin M. Rosenberg
-#  Date Started: Mar 2002
+#  Name:    Makefile.msvc
+#  Purpose: Makefile for the CLSQL UFFI helper package (MSVC)
+#  Author:  Kevin M. Rosenberg
+#  Created: Mar 2002
 #
 #  CVS Id:   $Id: Makefile.msvc,v 1.1 2002/09/18 07:43:40 kevin Exp $
 #
-# This file, part of CLSQL, is Copyright (c) 2002 by Kevin M. Rosenberg
+# This file, part of CLSQL, is Copyright (c) 2002-2004 by Kevin M. Rosenberg
 #
 # CLSQL users are granted the rights to distribute and use this software
 # as governed by the terms of the Lisp Lesser GNU Public License
@@ -17,7 +17,7 @@
 ###########################################################################
 
 
-BASE=clsql-mysql
+BASE=mysql
 
 # Set to the directory where you have installed mysql's library
 MYSQL_DIR=c:/mysql
