--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cl-sql
 Section: devel
 Priority: extra
 Maintainer: Kevin M. Rosenberg <kmr@debian.org>
-Build-Depends: debhelper (>= 4.0.0), libmysqlclient-dev, postgresql-dev
+Build-Depends: debhelper (>= 4.0.0), libmysqlclient14-dev, postgresql-dev
 Build-Depends-Indep: debhelper (>= 4.0.0)
 Standards-Version: 3.6.1.1
 
@@ -26,7 +26,7 @@ Description: Common UFFI functions for CLSQL database backends
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql (>= ${Source-Version}), libmysqlclient-dev, cl-sql-uffi (>= ${Source-Version})
+Depends: cl-sql (>= ${Source-Version}), libmysqlclient14-dev, cl-sql-uffi (>= ${Source-Version})
 Provides: cl-sql-backend
 Description: CLSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
@@ -78,6 +78,15 @@ Provides: cl-sql-backend
 Description: CLSQL database backend, SQLite
  This package enables you to use the CLSQL data access package
  with SQLite databases. 
+ CLSQL is a Common Lisp interface to SQL databases.
+
+Package: cl-sql-sqlite3
+Architecture: all
+Depends: cl-sql (>= ${Source-Version}), libsqlite3-dev, cl-sql-uffi (>= ${Source-Version})
+Provides: cl-sql-backend
+Description: CLSQL database backend, SQLite3
+ This package enables you to use the CLSQL data access package
+ with SQLite3 databases. 
  CLSQL is a Common Lisp interface to SQL databases.
 
 Package: cl-sql-oracle
