--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cl-sql
 Section: devel
 Priority: extra
 Maintainer: Kevin M. Rosenberg <kmr@debian.org>
-Build-Depends: debhelper (>= 4.0.0), libmysqlclient14-dev, postgresql-dev
+Build-Depends: debhelper (>= 4.0.0), libmysqlclient14-dev, libpq-dev
 Build-Depends-Indep: debhelper (>= 4.0.0)
 Standards-Version: 3.6.1.1
 
@@ -55,7 +55,7 @@ Description: CLSQL database backend, ODBC
 
 Package: cl-sql-postgresql
 Architecture: all
-Depends: cl-sql (>= ${Source-Version}), postgresql-dev, cl-sql-uffi (>= ${Source-Version})
+Depends: cl-sql (>= ${Source-Version}), libpq-dev, cl-sql-uffi (>= ${Source-Version})
 Provides: cl-sql-backend
 Description: CLSQL database backend, PostgreSQL
  This package enables you to use the CLSQL data access package
