r10575: 09 Jun 2005 Kevin Rosenberg <kevin@rosenberg.net>         * clsql-mysql.asd: Renamed uffi/mysql interface library from         mysql to uffi_mysql         * db-mysql/uffi_mysql.c: Renamed from mysql.c         * db-mysql/Makefile, db-mysql/mysql-loader.lisp: Rename shared library         * db-*/*-loader.lisp: Commit big patch from Edi Weitz to remove         absolute pathnames when searching for foreign libraries.         * uffi/clsql-uffi-loader: New file from Edi Weitz for support         foreign library loading.

--- a/db-mysql/Makefile
+++ b/db-mysql/Makefile
@@ -17,10 +17,11 @@ SUBDIRS=
 
 include ../Makefile.common
 
-base=uffi_mysql
+base=clsql_mysql
 source=$(base).c
 object=$(base).o
-shared_lib=uffi_mysql.so
+shared_lib=$(base).so
+
 
 .PHONY: all
 all: $(shared_lib)
