r10578: rename foreign library

--- a/uffi/Makefile.msvc
+++ b/uffi/Makefile.msvc
@@ -17,7 +17,7 @@
 ###########################################################################
 
 
-BASE=uffi
+BASE=clsql_uffi
 
 # Nothing to configure beyond here
 
