r10579: Automated commit for Debian build of clsql upstream-version-3.1.17

--- a/debian/rules
+++ b/debian/rules
@@ -44,10 +44,10 @@ clc-sql		:= $(clc-source)/clsql
 lispdir-sql	:= $(clc-sql)/sql
 clc-uffi	:= $(clc-source)/clsql-uffi
 lispdir-uffi 	:= $(clc-uffi)/uffi
-sodir-uffi 	:= usr/lib/clsql
+sodir-uffi 	:= usr/lib
 clc-mysql	:= $(clc-source)/clsql-mysql
 lispdir-mysql	:= $(clc-mysql)/db-mysql
-sodir-mysql	:= usr/lib/clsql
+sodir-mysql	:= usr/lib
 clc-pg		:= $(clc-source)/clsql-postgresql
 lispdir-pg	:= $(clc-pg)/db-postgresql
 clc-pg-socket 	:= $(clc-source)/clsql-postgresql-socket
