r10612: 05 Jul 2005  Kevin Rosenberg <kevin@rosenberg.net>         * Version 3.2.1         * doc/appendix.xml: Incorporate Edi Weitz's notes into documentation         with changes to support case-sensitive lisp implementations. Add         paragraph on using /etc/clsql-init.lisp site initialization file.         * clsql.asd: Load file /etc/clsql-init.lisp, if it         exists, after package is loaded to set site-specific configuration
2005-06-24  Edi Weitz  <edi@agharta.de>
        * sql/db-interface.lisp: Added new special variable
        *FOREIGN-LIBRARY-SEARCH-PATHS* and function PUSH-LIBRARY-PATH to
        manipulate it.
        * sql/package.lisp: Export these.
        * uffi/clsql-uffi-loader.lisp: Used new variable; changed order of
        libs.
        * db-mysql/mysql-loader.lisp: Changed order of libs.

--- a/debian/rules
+++ b/debian/rules
@@ -100,7 +100,7 @@ install: build
 	dh_installdirs
 
 	dh_installdirs --all  $(clc-systems) $(clc-source)
-	dh_installdirs -p $(pkg) $(lispdir-sql)
+	dh_installdirs -p $(pkg) $(lispdir-sql) etc
 	dh_installdirs -p $(pkg-uffi) $(lispdir-uffi) $(sodir-uffi)
 	dh_installdirs -p $(pkg-pg) $(lispdir-pg)
 	dh_installdirs -p $(pkg-pg-socket) $(lispdir-pg-socket)
@@ -115,6 +115,7 @@ install: build
 	# Main package
 	dh_install -p $(pkg) $(srcs) $(lispdir-sql)
 	dh_install -p $(pkg) clsql.asd $(clc-clsql)
+	dh_install -p $(pkg) debian/clsql-init.lisp etc
 
 	# UFFI
 	dh_install -p $(pkg-uffi) $(srcs-uffi) $(lispdir-uffi)
@@ -239,4 +240,3 @@ binary-arch: build install
 binary: binary-indep binary-arch
 
 .PHONY: build clean binary-indep binary-arch binary install configure
-
