r10845: 26 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>         * Version 3.5.0         * tests/test-init.lisp, tests/test-fddl.lisp, tests/test-fdml.lisp,         * db-odbc/odbc-api.lisp, db-odbc/odbc-ff-interface.lisp,         * db-odbc/odbc-package.lisp, db-odbc/odbc-constants.lisp         * db-odbc/odbc-dbi.lisp, db-odbc/odbc-sql.lisp         * sql/fddl.lisp, sql/generic-odbc.lisp, sql/db-interface.lisp         * sql/transaction.lisp, sql/package.lisp, sql/time.lisp         Commit patch from Dominic Robinson providing support for         Microsoft SQL Server         * doc/csql.lisp: Fix typo in slot name

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cl-sql
 Section: devel
 Priority: extra
 Maintainer: Kevin M. Rosenberg <kmr@debian.org>
-Build-Depends: debhelper (>= 4.0.0), libmysqlclient14-dev | libmysqlclient15-dev, libpq-dev
+Build-Depends: debhelper (>= 4.0.0), libmysqlclient15-dev, libpq-dev
 Build-Depends-Indep: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2.1
 
@@ -26,7 +26,7 @@ Description: Common UFFI functions for CLSQL database backends
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql (>= ${Source-Version}), libmysqlclient14-dev | libmysqlclient15-dev, cl-sql-uffi (>= ${Source-Version})
+Depends: cl-sql (>= ${Source-Version}), libmysqlclient15, cl-sql-uffi (>= ${Source-Version})
 Provides: cl-sql-backend
 Description: CLSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
