--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Description: SQL Interface for Common Lisp
 
 Package: cl-sql-uffi
 Architecture: any
-Depends: cl-uffi, cl-sql (>= ${Source-Version})
+Depends: cl-uffi, cl-sql (>= ${Source-Version}), ${shlibs:Depends}
 Recommends: cl-sql-backend
 Description: Common UFFI functions for CLSQL database backends
  This package provides an interface to several UFFI functions used by multiple
@@ -26,7 +26,7 @@ Description: Common UFFI functions for CLSQL database backends
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql (>= ${Source-Version}), libmysqlclient15, cl-sql-uffi (>= ${Source-Version})
+Depends: cl-sql (>= ${Source-Version}), cl-sql-uffi (>= ${Source-Version}), ${shlibs:Depends}
 Provides: cl-sql-backend
 Description: CLSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
