r10936: 08 May 2006  Kevin Rosenberg <kevin@rosenberg.net>         * Version: 3.6.0 (requires UFFI v1.5.11 or greater)         * db-oracle/metaclasses.lisp: Patch from James Bielman for         checking slot constraints.         * db-oracle/oracle-{api,sql}.lisp: Avoid dead pointers on loading         saved openmcl images (based on patch from James Bielman)

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Description: SQL Interface for Common Lisp
 
 Package: cl-sql-uffi
 Architecture: any
-Depends: cl-uffi, cl-sql (>= ${Source-Version}), ${shlibs:Depends}
+Depends: cl-uffi (>= 1.5.11), cl-sql (>= ${Source-Version}), ${shlibs:Depends}
 Recommends: cl-sql-backend
 Description: Common UFFI functions for CLSQL database backends
  This package provides an interface to several UFFI functions used by multiple
