r11058: 29 Aug 2006  Kevin Rosenberg <kevin@rosenberg.net> 	* Makefile.common: Add OS detection 	* uffi/make.sh, db-mysql/make.sh: Remove files 	* uffi/Makefile, db-mysql/Makefile: Add support for cygwin compilation. 	Refactor to remove need to make.sh shell scripts. 	* clsql.asd: Add support for loop extensions for clisp. 	* sql/loop-extension.lisp: Add support for ansi-loop on clisp. 	Define loop-record-iteration-path in CLSQL-SYS package rather 	than CL-USER. 	* sql/ansi-loop.lisp: New file to support iteration on clisp.

--- a/Makefile.common
+++ b/Makefile.common
@@ -1,3 +1,10 @@
+UNAME=$(shell uname)
+
+OS_AIX=$(shell expr "$(UNAME)" : '.*AIX.*')
+OS_SUNOS=$(shell expr "$(UNAME)" : '.*SunOS.*')
+OS_DARWIN=$(shell expr "$(UNAME)" : '.*Darwin.*')
+OS_CYGWIN=$(shell expr "$(UNAME)" : '.*CYGWIN.*')
+
 all:
 	
 
