--- a/uffi/Makefile
+++ b/uffi/Makefile
@@ -1,3 +1,4 @@
+#!/usr/bin/make
 # FILE IDENTIFICATION
 #
 #  Name:         Makefile
@@ -7,7 +8,7 @@
 #
 #  CVS Id:   $Id$
 #
-# This file, part of CLSQL, is Copyright (c) 2002 by Kevin M. Rosenberg
+# This file, part of CLSQL, is Copyright (c) 2002-2006 by Kevin M. Rosenberg
 #
 # CLSQL users are granted the rights to distribute and use this software
 # as governed by the terms of the Lisp Lesser GNU Public License
@@ -26,9 +27,36 @@ shared_lib=$(base).so
 all: $(shared_lib)
 
 $(shared_lib): $(source) Makefile
-	BASE=$(base) OBJECT=$(object) SOURCE=$(source) SHARED_LIB=$(shared_lib) LDFLAGS="-lc" sh make.sh
+ifneq ($(OS_AIX),0)
+	gcc -c -D_BSD -D_NO_PROTO -D_NONSTD_TYPES -D_MBI=void $(source)
+	make_shared -o $(shared_lib) $(object)
+else
+  ifneq ($(OS_SUNOS),0)
+	cc -KPIC -c $(source) -o $(object)
+	cc -G $(object) -o $(shared_lib)
+  else
+    ifneq ($(OS_DARWIN),0)
+	cc -dynamic -c $(source) -o $(object)
+	ld -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress -o $(base).dylib $(object)
+	ld -bundle /usr/lib/bundle1.o -flat_namespace -undefined suppress /usr/lib/libz.dylib -o z.dylib
+    else
+      ifneq ($(OS_CYGWIN),0)
+	gcc -c $(source) -o $(object)
+	ld -shared -soname=$(base) $(LDFLAGS) $(object) -o $(shared_lib)
+      else
+	gcc -fPIC -DPIC -c $(source) -o $(object)
+	ld -shared -soname=$(base) -lc $(object) -o $(shared_lib)
+      endif
+    endif
+  endif
+endif
 	rm $(object)
+
 
 .PHONY: distclean
 distclean: clean
 	rm -f $(base).dylib $(base).dylib $(base).so $(base).o
+
+
+
+
