r11417: 28 Dec 2006  Kevin Rosenberg <kevin@rosenberg.net> 	* Version 3.7.9 	* sql/expressions.lisp: Commit patch from Edi Weitz to 	use *default-database* for SQL-OUTPUT if no database is 	explicitly passed to function. 	* uffi/clsql-uffi-loader.lisp: Change load order to first try 	plain name/type before attempting user-specified paths (patch 	from Edi Weitz) 	* uffi/ptrbits.c: New file to return number of bits in an pointer 	* uffi/Makefile: use intbits to name .so file based on bit size. 	Build both 32-bit and 64-bit libraries on 64-bit platform.

--- a/uffi/.gitignore
+++ b/uffi/.gitignore
@@ -1,4 +1,6 @@
 clsql_uffi.so
+clsql_uffi32.so
+clsql_uffi64.so
 uffi.so
 uffi.dll
 uffi.lib
@@ -13,3 +15,4 @@ uffi.dylib
 *.faslm16
 *.faslm8
 *.fsl
+intbits
